Setting sky texture direction with the python console has no effect #38524

Closed
opened 2014-02-06 19:42:19 +01:00 by gandalf3 · 8 comments
Member

System Information
Archlinux
Nvidia GTX 460

Blender Version
Broken: 2.69.10 c7ac0ed

Short description of error
Setting the direction of a sky texture node with python has no effect.

Exact steps for others to reproduce the error
Based on sky_texture_python_update.blend

  1. Enable viewport rendering.
  2. Run bpy.data.worlds['World'].node_tree.nodes['Sky Texture'].sun_direction = bpy.data.objects['Lamp'].rotation_euler in the python console.
  3. The indicator on the node updates, but there is no change in the 3D view.
  4. Click on the indicator/button in the sky texture node. The 3D view will update and show the correct orientation.
**System Information** Archlinux Nvidia GTX 460 **Blender Version** Broken: 2.69.10 c7ac0ed **Short description of error** Setting the direction of a sky texture node with python has no effect. **Exact steps for others to reproduce the error** Based on [sky_texture_python_update.blend](https://archive.blender.org/developer/F76244/sky_texture_python_update.blend) 1. Enable viewport rendering. 2. Run `bpy.data.worlds['World'].node_tree.nodes['Sky Texture'].sun_direction = bpy.data.objects['Lamp'].rotation_euler` in the python console. 3. The indicator on the node updates, but there is no change in the 3D view. 4. Click on the indicator/button in the sky texture node. The 3D view will update and show the correct orientation.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

This issue was referenced by blender/blender-addons-contrib@135e4e69a1

This issue was referenced by blender/blender-addons-contrib@135e4e69a18220034820a4586be44960be89a639

This issue was referenced by 135e4e69a1

This issue was referenced by 135e4e69a18220034820a4586be44960be89a639

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 135e4e69a1.

Closed by commit 135e4e69a1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38524
No description provided.