Fix T38524: Cycles not rendering sky texture correct when the direction vector is not normalized.